--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             width: 100vw;
             height: 100vh;
             background-color: black;
+            overflow: hidden;
         }
         .video {
             width: 100%;
