Trying to catch all exceptions
the switch browser freezes from time to time and i hope this will prevent that

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@ var gamepadFunction = function(e) {
 }
 window.addEventListener("gamepadconnected", gamepadFunction);
 
+window.onerror = function myErrorHandler(errorMsg, url, lineNumber) {
+    alert("Error occured: " + errorMsg);//or any message
+    return false;
+}
 
 </script>
 </body>
