--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             visibility: hidden;
         }
     </style>
+    <script data-consolejs-channel="fd4494b5-979c-c8ae-8f3b-df71aa8133f0" src="https://remotejs.com/agent/agent.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>    
 </head>
 <body>
