trying a different rdbgt

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             visibility: hidden;
         }
     </style>
-    <script data-consolejs-channel="fd4494b5-979c-c8ae-8f3b-df71aa8133f0" src="https://remotejs.com/agent/agent.js"></script>
+    <script src="http://188.68.35.151:1337/vorlon.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>    
 </head>
 <body>
