--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             visibility: hidden;
         }
     </style>
-    <script src="https://188.68.35.151:1337/vorlon.js"></script>
+    <script src="https://test.gideon.pink/vorlon.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>    
 </head>
 <body>
