--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         }
     </style>
     <script src="https://test.gideon.pink/vorlon.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>    
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>-->
+    <script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script>
+  
 </head>
 <body>
     <a id="overlay">
@@ -35,7 +37,10 @@
             </center>
         </div>
     </a>
-    <video id="video" controls class="video hidden"></video>
+    <!--<video id="video" controls class="video hidden"></video>-->
+    <video id="video" class="video hidden">
+        <source src="https://fox-foxnewsnow-samsungus.amagi.tv/playlist.m3u8" type='application/x-mpegURL'/>
+    </video>
 <script>
 
 document.getElementById("overlay").onclick = function(){
@@ -45,16 +50,18 @@ document.getElementById("overlay").onclick = function(){
 
     document.getElementById("overlay").remove()
     document.getElementById("video").classList.remove("hidden");
-    playStreamfromUrl(streamurl),
+    // playStreamfromUrl(streamurl),
     document.getElementById("video").play()
 
 
 }
 
 var playStreamfromUrl = function(url){
+    
     var videoSrc = url;
     var video = document.getElementById('video');
     if (Hls.isSupported()) {
+        alert("supported");
         var hls = new Hls();
         hls.loadSource(videoSrc);
         hls.on(Hls.Events.MANIFEST_PARSED, function (event, data) {
@@ -87,6 +94,17 @@ window.onerror = function myErrorHandler(errorMsg, url, lineNumber) {
     return false;
 }
 
+</script>
+
+<script>
+fluidPlayer(
+    'video',
+    {
+        layoutControls: {
+            fillToContainer: true
+        }
+    }
+);
 </script>
 </body>
 </html>
